# kalshi-edge

./: .env.example  .gitignore  SHARING.md  pyproject.toml
.github/workflows/: update-report.yml
analyst_inputs/: README.md
analyst_inputs/economics/: example_cpi_manual.yaml
config/: categories.yaml  default.yaml
src/kalshi_edge/: __init__.py  cli.py  config.py  forecast.py  logging_.py  report.py  types.py
src/kalshi_edge/alerts/: __init__.py
src/kalshi_edge/backtest/: __init__.py  analysis.py  persistence.py  report_html.py  resolutions.py  retro_market.py  scoring.py
src/kalshi_edge/calibration/: __init__.py
src/kalshi_edge/dashboard/: __init__.py
src/kalshi_edge/data_sources/: __init__.py  fred.py  open_meteo.py  polymarket.py  the_odds_api.py
src/kalshi_edge/forecasters/: __init__.py  base.py  economics.py  economics_qf.py  politics.py  polymarket_match.py  polymarket_prior.py  rates.py  sports.py  sports_rules.py  weather.py  weather_rules.py
src/kalshi_edge/fundamental/: __init__.py
src/kalshi_edge/fundamental/automated/: __init__.py  cpi.py
src/kalshi_edge/fundamental/briefs/: __init__.py  generator.py
src/kalshi_edge/fundamental/calibration/: __init__.py  cpi_loadings.py
src/kalshi_edge/fundamental/manual/: __init__.py  loader.py
src/kalshi_edge/fundamental/schemas/: __init__.py  base.py  cpi.py
src/kalshi_edge/integration/: __init__.py  engine.py
src/kalshi_edge/market/: __init__.py  _rate_limit.py  auth.py  kalshi.py  parser.py  strikes.py  universe.py
src/kalshi_edge/ranker/: __init__.py
src/kalshi_edge/storage/: __init__.py  db.py  schema.sql
tests/: test_auth.py  test_backtest_persistence.py  test_backtest_scoring.py  test_forecast.py  test_integration_engine.py  test_parser.py  test_polymarket_cross.py  test_rate_limit.py  test_sports_rules.py  test_storage.py  test_universe.py  test_weather.py
